feat: add docs and improve utility functions

--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,11 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
+{profiles, [
+    {docs, [
+        {deps, [edown]},
+        {edoc_opts, [
+            {doclet, edown_doclet},
+            {stylesheet, ""}
+        ]}
+    ]}
+]}.
