chore: update docs and rename some files

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,11 @@
         {deps, [edown]},
         {edoc_opts, [
             {doclet, edown_doclet},
-            {stylesheet, ""}
+            {edown_target, github},
+            {source_path, ["src"]},
+            {app_default, "#"},
+            {stylesheet, ""},
+            {image, ""}
         ]}
     ]}
 ]}.
